fixed footer spacing

--- a/css/layout.css
+++ b/css/layout.css
@@ -1,10 +1,16 @@
+html{
+    margin: 0;
+    height: 100%;
+}
+
 
 body{
     display: grid;
-    grid-template-rows: auto;
+    grid-template-rows: 10% 80% 10%;
     grid-template-columns: 100%;
     grid-gap: 1rem;
     margin: 0;
+    height: 100%;
 }
 
 header{
